log
Sun May  4 17:27:59 -04 2025: 
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
f63ac8e
